// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth render should change submit button text if loading and make it disabled 1`] = `
<form data-test="auth-form" message="foo">
  <!---->
  <v-title-stub><span>Log in&nbsp;to&nbsp;your Endpass account to&nbsp;access site actions</span></v-title-stub>
  <!---->
  <form-item-stub>
    <v-input-stub value="" data-vv-as="email" data-vv-name="email" name="email" type="email" placeholder="Enter your email..." data-test="email-input"></v-input-stub>
  </form-item-stub>
  <v-button-stub skin="primary" size="big" disabled="true" data-test="submit-button-auth">
    Loading...
  </v-button-stub>
  <v-spacer-stub height="3" width="0"></v-spacer-stub>
  <v-divider-stub>or sign in with</v-divider-stub>
  <form-row-stub class="auth-form-social-buttons">
    <google-auth-button-stub type="button"></google-auth-button-stub>
    <v-spacer-stub height="0" width="16"></v-spacer-stub>
    <git-auth-button-stub type="button"></git-auth-button-stub>
  </form-row-stub>
  <v-divider-stub></v-divider-stub>
  <form-row-stub centered="">
    <v-checkbox-stub name="checkbox" value="true" truevalue="true">
      I accept the
      <v-link-stub isunderline="true" href="https://endpass.com/terms/" target="_blank">
        Terms of Service
      </v-link-stub>
      &nbsp;and
      <v-link-stub isunderline="true" href="https://endpass.com/privacy/" target="_blank">
        Privacy Policy
      </v-link-stub>
    </v-checkbox-stub>
  </form-row-stub>
</form>
`;

exports[`Auth render should correctly render Auth component 1`] = `
<form data-test="auth-form">
  <!---->
  <v-title-stub><span>Log in&nbsp;to&nbsp;your Endpass account to&nbsp;access site actions</span></v-title-stub>
  <!---->
  <form-item-stub>
    <v-input-stub value="" data-vv-as="email" data-vv-name="email" name="email" type="email" placeholder="Enter your email..." data-test="email-input"></v-input-stub>
  </form-item-stub>
  <v-button-stub skin="primary" size="big" data-test="submit-button-auth" disabled="true">
    Continue
  </v-button-stub>
  <v-spacer-stub height="3" width="0"></v-spacer-stub>
  <v-divider-stub>or sign in with</v-divider-stub>
  <form-row-stub class="auth-form-social-buttons">
    <google-auth-button-stub type="button"></google-auth-button-stub>
    <v-spacer-stub height="0" width="16"></v-spacer-stub>
    <git-auth-button-stub type="button"></git-auth-button-stub>
  </form-row-stub>
  <v-divider-stub></v-divider-stub>
  <form-row-stub centered="">
    <v-checkbox-stub name="checkbox" value="true" truevalue="true">
      I accept the
      <v-link-stub isunderline="true" href="https://endpass.com/terms/" target="_blank">
        Terms of Service
      </v-link-stub>
      &nbsp;and
      <v-link-stub isunderline="true" href="https://endpass.com/privacy/" target="_blank">
        Privacy Policy
      </v-link-stub>
    </v-checkbox-stub>
  </form-row-stub>
</form>
`;
